Support simultaneous GC iterations